--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<java.version>11</java.version>
 		<spring-cloud.version>Hoxton.SR9</spring-cloud.version>
 		<testcontainers.version>1.15.1</testcontainers.version>
+		<rerunner-jupiter.version>2.1.6</rerunner-jupiter.version>
 	</properties>
 
 	<dependencyManagement>
@@ -35,6 +36,12 @@
 				<version>${testcontainers.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.github.artsok</groupId>
+				<artifactId>rerunner-jupiter</artifactId>
+				<version>${rerunner-jupiter.version}</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -94,6 +101,12 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>junit-jupiter</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.artsok</groupId>
+			<artifactId>rerunner-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
 
