--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<java.version>11</java.version>
 		<spring-cloud.version>Hoxton.SR9</spring-cloud.version>
 		<testcontainers.version>1.15.1</testcontainers.version>
-		<rerunner-jupiter.version>2.1.6</rerunner-jupiter.version>
+		<junit-pioneer.version>1.1.0</junit-pioneer.version>
 	</properties>
 
 	<dependencyManagement>
@@ -38,9 +38,9 @@
 				<scope>import</scope>
 			</dependency>
 			<dependency>
-				<groupId>io.github.artsok</groupId>
-				<artifactId>rerunner-jupiter</artifactId>
-				<version>${rerunner-jupiter.version}</version>
+				<groupId>org.junit-pioneer</groupId>
+				<artifactId>junit-pioneer</artifactId>
+				<version>${junit-pioneer.version}</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
@@ -105,8 +105,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.github.artsok</groupId>
-			<artifactId>rerunner-jupiter</artifactId>
+			<groupId>org.junit-pioneer</groupId>
+			<artifactId>junit-pioneer</artifactId>
 			<scope>test</scope>
 		</dependency>
 
