--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<java.version>11</java.version>
 		<spring-cloud.version>Hoxton.SR9</spring-cloud.version>
 		<testcontainers.version>1.15.1</testcontainers.version>
-		<junit-pioneer.version>1.3.8</junit-pioneer.version>
+		<selenium-table.version>1.1</selenium-table.version>
 	</properties>
 
 	<dependencyManagement>
@@ -105,12 +105,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.junit-pioneer</groupId>
-			<artifactId>junit-pioneer</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>selenium</artifactId>
 			<scope>test</scope>
@@ -125,6 +119,12 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-support</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>co.boorse</groupId>
+			<artifactId>selenium-table</artifactId>
+			<version>${selenium-table.version}</version>
 		</dependency>
 
 		<dependency>
